src/test/ui/consts/const-eval/issue-65394.stderr
error[E0764]: mutable references are not allowed in constants
  --> $DIR/issue-65394.rs:8:13
   |
LL |     let r = &mut x;
   |             ^^^^^^ `&mut` is only allowed in `const fn`

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/issue-65394.rs:7:9
   |
LL |     let mut x = Vec::<i32>::new();
   |         ^^^^^ constants cannot evaluate destructors

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0493, E0764.
For more information about an error, try `rustc --explain E0493`.
